[tool.poetry]
name = "seq2rel-ds"
version = "0.1.0"
description = "This is sister repository to seq2rel which aims to make it easy to generate training data."
license = "Apache-2.0"
authors = ["johngiorgi <johnmgiorgi@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/JohnGiorgi/seq2rel-ds"
repository = "https://github.com/JohnGiorgi/seq2rel-ds"
documentation = "https://github.com/JohnGiorgi/seq2rel-ds"
keywords = ["seq2rel", "seq2seq", "information extraction", "distant supervision", "weak supervision"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
exclude = ["tests"]

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^1.2.1"
fuzzywuzzy = "^0.18.0"
joblib = "^1.0.1"
more-itertools = "^8.7.0"
pandas = "^1.2.1"
python-Levenshtein = "^0.12.2"
scispacy = "0.3.0"
typer = "^0.3.2"
wasabi = "^0.8.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
dephell = {extras = ["full"], version = "^0.8.3"}
flake8 = "^3.8.4"
ipykernel = "^5.4.3"
jupyter = "^1.0.0"
mypy = "^0.812"
pytest = "^5.2"

[tool.poetry.scripts]
seq2rel-ds = "seq2rel_ds.main:app"

# Allows us to automatically generate a setup.py file (with `dephell deps convert`)
# from this pyproject.toml so people who are not interested in using poetry don't have to.
# See: https://github.com/dephell/dephell
[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

# This configuration is borrowed from: https://github.com/allenai/allennlp/blob/main/pyproject.toml
[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
